--- a/feature-staking-impl/src/main/res/layout/fragment_start_change_validators.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_start_change_validators.xml
@@ -2,85 +2,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/startChangeValidatorsContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/startChangeValidatorsContainer"
     tools:background="@color/black">
 
     <io.novafoundation.nova.common.view.Toolbar
         android:id="@+id/startChangeValidatorsToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:titleText="@string/staking_recommended_title" />
+        app:dividerVisible="false"
+        app:titleText="@string/staking_change_validators" />
 
-    <TextView
-        style="@style/TextAppearance.NovaFoundation.Header4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/staking_start_change_validators_recommended_title" />
-
-    <TextView
-        style="@style/TextAppearance.NovaFoundation.Body2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/staking_start_change_validators_recommended_subtitle_v2_2_0"
-        android:textColor="@color/black1" />
-
-    <TextView
-        android:id="@+id/startChangeValidatorsRecommendedFeatures"
-        style="@style/TextAppearance.NovaFoundation.Body2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:lineSpacingExtra="5dp"
-        android:textColor="@color/black1"
-        tools:text="✅ Most profitable\n✅ Most profitable" />
-
-    <io.novafoundation.nova.common.view.GoNextView
+    <io.novafoundation.nova.common.view.AdvertisementCard
         android:id="@+id/startChangeValidatorsRecommended"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/staking_select_recommended"
-        app:actionIcon="@drawable/ic_chevron_right"
-        app:icon="@drawable/ic_validators_outline"
-        app:inProgress="true" />
-
-    <TextView
-        style="@style/TextAppearance.NovaFoundation.Header4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/staking_start_change_validators_custom_title" />
-
-    <TextView
-        style="@style/TextAppearance.NovaFoundation.Body2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/staking_start_change_validators_custom_subtitle_v2_2_0"
-        android:textColor="@color/black1" />
+        android:background="@drawable/bg_advertisement_blue"
+        app:action="@string/common_continue"
+        app:image="@drawable/advertisement_star"
+        app:learnMore="@string/common_how_it_works"
+        app:subtitle="@string/staking_start_change_validators_recommended_subtitle"
+        app:title="@string/staking_start_change_validators_recommended_title" />
 
     <io.novafoundation.nova.common.view.GoNextView
         android:id="@+id/startChangeValidatorsCustom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:actionIcon="@drawable/ic_chevron_right"
+        android:layout_marginEnd="16dp"
         android:text="@string/staking_select_custom"
-        app:icon="@drawable/ic_bullet_list"
-        app:inProgress="true" />
+        app:actionIcon="@drawable/ic_chevron_right"
+        app:actionTint="@color/white_64"
+        app:dividerVisible="false"
+        tools:background="@color/white_8" />
 </LinearLayout>
