Fix send layout for long token and chain names

--- a/feature-account-api/src/main/res/layout/view_chain_chip.xml
+++ b/feature-account-api/src/main/res/layout/view_chain_chip.xml
@@ -15,6 +15,7 @@
         android:paddingStart="32dp"
         android:paddingTop="4.5dp"
         android:paddingEnd="8dp"
+        android:singleLine="true"
         android:paddingBottom="4.5dp"
         android:textColor="@color/white_80"
         tools:background="@color/white_16"
