Fix layouts for long balances on assets screen

--- a/feature-assets/src/main/res/layout/item_asset.xml
+++ b/feature-assets/src/main/res/layout/item_asset.xml
@@ -61,21 +61,33 @@
     <TextView
         android:id="@+id/itemAssetDollarAmount"
         style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:gravity="end|center_vertical"
+        android:maxLines="1"
         android:textColor="@color/white_64"
         app:layout_constraintBaseline_toBaselineOf="@id/itemAssetRateChange"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toEndOf="@+id/itemAssetRateChange"
         tools:text="$1,000.05" />
 
     <TextView
         android:id="@+id/itemAssetBalance"
         style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
-        android:layout_width="wrap_content"
-        app:layout_constraintBaseline_toBaselineOf="@id/itemAssetToken"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:ellipsize="end"
+        android:gravity="end|center_vertical"
+        android:maxLines="1"
+        app:layout_constraintBaseline_toBaselineOf="@id/itemAssetToken"
         app:layout_constraintEnd_toEndOf="@+id/itemAssetDollarAmount"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toEndOf="@+id/itemAssetToken"
         tools:text="120.0849" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
