Do not allow multiline title and subtitle in item_dapp.xml

--- a/feature-dapp-impl/src/main/res/layout/item_dapp.xml
+++ b/feature-dapp-impl/src/main/res/layout/item_dapp.xml
@@ -30,6 +30,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginEnd="24dp"
         android:ellipsize="end"
+        android:maxLines="1"
         android:includeFontPadding="false"
         android:singleLine="true"
         app:layout_constraintBottom_toTopOf="@+id/itemDAppSubtitle"
@@ -48,6 +49,8 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="24dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="@color/white_64"
         app:layout_constraintBottom_toBottomOf="@+id/itemDAppIcon"
         app:layout_constraintEnd_toStartOf="@+id/itemDappAction"
