Dapp/add to favourites (#244)
* Add to favourites screen

* Code style

* Improve add to favourites information autofill

* Code style

* Update remove confirmation dialog

* Fix strings

* Do not allow multiline title and subtitle in item_dapp.xml

* Code style

--- a/feature-dapp-impl/src/main/res/layout/item_dapp.xml
+++ b/feature-dapp-impl/src/main/res/layout/item_dapp.xml
@@ -31,6 +31,7 @@
         android:layout_marginEnd="24dp"
         android:ellipsize="end"
         android:includeFontPadding="false"
+        android:maxLines="1"
         android:singleLine="true"
         app:layout_constraintBottom_toTopOf="@+id/itemDAppSubtitle"
         app:layout_constraintEnd_toStartOf="@+id/itemDappAction"
@@ -48,6 +49,8 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="24dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="@color/white_64"
         app:layout_constraintBottom_toBottomOf="@+id/itemDAppIcon"
         app:layout_constraintEnd_toStartOf="@+id/itemDappAction"
@@ -58,9 +61,10 @@
 
     <ImageView
         android:id="@+id/itemDappAction"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
