--- a/feature-dapp-impl/src/main/res/layout/fragment_dapp_main.xml
+++ b/feature-dapp-impl/src/main/res/layout/fragment_dapp_main.xml
@@ -2,10 +2,10 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:overScrollMode="never"
-    android:scrollbars="none"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:overScrollMode="never"
+    android:scrollbars="none">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/dappMainContainer"
@@ -90,16 +90,34 @@
             app:layout_constraintTop_toBottomOf="@+id/dappMainWelcomeSubtitle" />
 
         <io.novafoundation.nova.feature_dapp_impl.presentation.main.view.TapToSearchView
+            android:id="@+id/dappMainSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:id="@+id/dappMainSearch"
-            android:layout_marginEnd="16dp"
             android:layout_marginTop="12dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dappMainWelcomeGroup" />
 
+        <TextView
+            android:id="@+id/dappMainCatalogTitle"
+            style="@style/TextAppearance.NovaFoundation.SemiBold.Title3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="24dp"
+            android:text="@string/dapp_catalog"
+            app:layout_constraintStart_toStartOf="@+id/dappMainSearch"
+            app:layout_constraintTop_toBottomOf="@+id/dappMainSearch" />
+
+
+        <io.novafoundation.nova.common.view.ManageButton
+            android:id="@+id/dappMainManage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/dappMainCatalogTitle"
+            app:layout_constraintEnd_toEndOf="@+id/dappMainSearch"
+            app:layout_constraintTop_toTopOf="@+id/dappMainCatalogTitle" />
 
         <io.novafoundation.nova.feature_dapp_impl.presentation.main.view.CategorizedDappsView
             android:id="@+id/dappMainCategorizedDapps"
@@ -112,7 +130,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dappMainSearch" />
+            app:layout_constraintTop_toBottomOf="@+id/dappMainManage" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
