--- a/feature-assets/src/main/res/layout/item_asset_header.xml
+++ b/feature-assets/src/main/res/layout/item_asset_header.xml
@@ -56,20 +56,13 @@
         app:layout_constraintTop_toBottomOf="@id/balanceListNfts"
         app:layout_goneMarginBottom="20dp" />
 
-    <ImageView
+    <io.novafoundation.nova.common.view.ManageButton
         android:id="@+id/balanceListManage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="12dp"
-        android:paddingTop="6dp"
-        android:paddingEnd="12dp"
-        android:paddingBottom="6dp"
-        android:src="@drawable/ic_options"
         app:layout_constraintBottom_toBottomOf="@+id/balanceListAssetTitle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/balanceListAssetTitle"
-        app:tint="@color/white_64"
-        tools:background="@color/black_48" />
+        app:layout_constraintTop_toTopOf="@+id/balanceListAssetTitle" />
 
     <io.novafoundation.nova.common.view.PlaceholderView
         android:id="@+id/balanceListAssetPlaceholder"
