--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -251,6 +251,13 @@
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
 
+        <action
+            android:id="@+id/action_mainFragment_to_startParachainStakingGraph"
+            app:destination="@id/staking_parachain_start_graph"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
     </fragment>
 
 
@@ -882,6 +889,8 @@
     <include app:graph="@navigation/dapp_search_graph" />
 
     <include app:graph="@navigation/nfts_nav_graph" />
+
+    <include app:graph="@navigation/staking_parachain_start_graph" />
 
     <fragment
         android:id="@+id/assetFiltersFragment"
