--- a/app/src/main/res/navigation/staking_parachain_start_graph.xml
+++ b/app/src/main/res/navigation/staking_parachain_start_graph.xml
@@ -7,6 +7,6 @@
     <fragment
         android:id="@+id/startParachainStakingFragment"
         app:layout="@layout/fragment_parachain_staking_start"
-        android:name="io.novafoundation.nova.feature_staking_impl.presentation.parachainStaking.start.StartParachainStakingFragment"
+        android:name="io.novafoundation.nova.feature_staking_impl.presentation.parachainStaking.start.setup.StartParachainStakingFragment"
         android:label="StartParachainStakingFragment" />
 </navigation>
