--- a/feature-staking-impl/src/main/res/layout/fragment_parachain_staking_start.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_parachain_staking_start.xml
@@ -36,7 +36,7 @@
                 android:text="@string/staking_parachain_collator"
                 android:textColor="@color/white_64" />
 
-            <io.novafoundation.nova.feature_staking_impl.presentation.parachainStaking.start.view.SelectCollatorView
+            <io.novafoundation.nova.feature_staking_impl.presentation.parachainStaking.start.setup.view.SelectCollatorView
                 android:id="@+id/startParachainStakingCollator"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
