--- a/feature-staking-impl/src/main/res/layout/view_payout_target.xml
+++ b/feature-staking-impl/src/main/res/layout/view_payout_target.xml
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
+        app:layout_goneMarginStart="16dp"
         android:layout_marginTop="11dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/payoutTargetAmountGain"
