--- a/feature-staking-impl/src/main/res/layout/item_validator.xml
+++ b/feature-staking-impl/src/main/res/layout/item_validator.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="44dp"
     android:animateLayoutChanges="true"
     android:background="@drawable/bg_primary_list_item"
     android:gravity="center_vertical"
@@ -14,19 +14,27 @@
         android:id="@+id/itemValidatorActionIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:visibility="gone"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="16dp"
-        android:src="@drawable/ic_delete_symbol" />
+        android:src="@drawable/ic_delete_symbol"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <com.google.android.material.checkbox.MaterialCheckBox
         android:id="@+id/itemValidationCheck"
         style="@style/Widget.Nova.Checkbox"
         android:layout_width="wrap_content"
-        tools:visibility="visible"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:clickable="false" />
+        android:clickable="false"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/itemValidatorActionIcon"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/itemValidatorIcon"
@@ -34,8 +42,9 @@
         android:layout_height="24dp"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/itemValidationCheck"
+        app:layout_constraintTop_toTopOf="parent"
         tools:src="@color/colorAccent" />
 
     <TextView
@@ -43,39 +52,67 @@
         style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="16dp"
-        android:layout_weight="1"
         android:ellipsize="middle"
         android:singleLine="true"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/itemValidatorSubtitleLabel"
+        app:layout_constraintEnd_toStartOf="@+id/amountBarrier"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/itemValidatorIcon"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
         tools:text="SUPERSYMMETRY" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/itemValidatorSubtitleLabel"
+        style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white_64"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/itemValidatorName"
+        app:layout_constraintTop_toBottomOf="@+id/itemValidatorName"
+        tools:text="Rewards:" />
+
+    <TextView
+        android:id="@+id/itemValidatorSubtitleValue"
+        style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        app:layout_constraintBottom_toBottomOf="@+id/itemValidatorSubtitleLabel"
+        app:layout_constraintStart_toEndOf="@+id/itemValidatorSubtitleLabel"
+        app:layout_constraintTop_toTopOf="@+id/itemValidatorSubtitleLabel"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="29.75%"
+        tools:textColor="@color/green" />
+
+    <TextView
+        android:id="@+id/itemValidatorScoringPrimary"
+        style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:orientation="vertical">
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/itemValidatorScoringSecondary"
+        app:layout_constraintEnd_toStartOf="@+id/itemValidatorInfo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:text="Token" />
 
-        <TextView
-            android:id="@+id/itemValidatorScoringPrimary"
-            style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:textColor="@color/white"
-            tools:text="17.81%" />
-
-        <TextView
-            android:id="@+id/itemValidatorScoringSecondary"
-            style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"
-            android:textColor="@color/white_64"
-            tools:text="17.81%" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/itemValidatorScoringSecondary"
+        style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|end"
+        android:textColor="@color/white_64"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/itemValidatorInfo"
+        app:layout_constraintTop_toBottomOf="@+id/itemValidatorScoringPrimary"
+        tools:text="Fiat" />
 
 
     <ImageView
@@ -86,5 +123,23 @@
         android:layout_marginEnd="8dp"
         android:padding="8dp"
         android:src="@drawable/ic_info_16"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/white_48" />
-</LinearLayout>
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/amountBarrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="left"
+        app:constraint_referenced_ids="itemValidatorScoringPrimary,itemValidatorScoringSecondary" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/itemValidatorSubtitleGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:constraint_referenced_ids="itemValidatorSubtitleLabel,itemValidatorSubtitleValue" />
+</androidx.constraintlayout.widget.ConstraintLayout>
